Figured out some bugs I had last quarters. Still not sure how to make the CFG text look better when opening the second bard. At the moment, I have the textboxes shift to the side when the second bar appears, and shift back when the bar closes, but since it just moves instantly rather than smoothly like the bar does, it looks weird to me. I have changed some files other than CFG since I could not think of a better solution.

--- a/styles/index.css
+++ b/styles/index.css
@@ -374,3 +374,20 @@ ul {
     margin-left: 4.5rem;
   }
 }
+
+.CFG_specific {
+  margin-top: 0.5rem;
+  margin-left: 7rem;
+}
+
+.cfg_list_object {
+  margin-left: 7rem;
+}
+
+.cfg_symbol {
+  width: 1.5ch;
+}
+
+.cfg_rule {
+  width: 7ch;
+}
